tests/fail/elaboration/unsolved/hole-ann.snap
stdout = '''
?woopsie : Type
'''
stderr = '''
error: failed to infer hole expression
  ┌─ tests/fail/elaboration/unsolved/hole-ann.fathom:3:1
  │
3 │ ?woopsie : Type
  │ ^^^^^^^^ unsolved hole expression

'''
